--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,22 +3,15 @@
     <string name="glass_voice_trigger">VGCamera</string>
 
     <string name="options">Options</string>
-    <string name="overlay">Overlay</string>
     <string name="zoom">Zoom</string>
-    <string name="location">Location</string>
-    <string name="storage">Storage</string>
+    <string name="toggle_overlay">Toogle Overlay</string>
+    <string name="toggle_location">Toggle Location</string>
+    <string name="toggle_autosave">Toggle Autosave</string>
 
-    <string name="in">In</string>
-    <string name="out">Out</string>
-    <string name="max">Max</string>
-    <string name="reset">Reset</string>
-
-    <string name="overlay_on">Activate Overlay</string>
-    <string name="overlay_off">Overlay Off</string>
-    <string name="autosave_on">Activate Autosave</string>
-    <string name="autosave_off">Autosave Off</string>
-    <string name="location_on">Activate Location</string>
-    <string name="location_off">Location Off</string>
+    <string name="zoom_in">In</string>
+    <string name="zoom_out">Out</string>
+    <string name="toggle_max_zoom">Toggle Max</string>
+    <string name="toggle_smooth_zoom">Toggle Smooth</string>
 
     <string name="take_picture">Take a picture</string>
     <string name="take_video">Record a video</string>
