lot of improvement, first usable release (camera only), read the readme!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,14 @@
 
     <string name="options">Options</string>
     <string name="zoom">Zoom</string>
-    <string name="toggle_overlay">Toogle Overlay</string>
-    <string name="toggle_location">Toggle Location</string>
-    <string name="toggle_autosave">Toggle Autosave</string>
+    <string name="toggle_overlay">Overlay</string>
+    <string name="toggle_location">Geotag</string>
+    <string name="toggle_autosave">Autosave</string>
 
     <string name="zoom_in">In</string>
     <string name="zoom_out">Out</string>
-    <string name="toggle_max_zoom">Toggle Max</string>
-    <string name="toggle_smooth_zoom">Toggle Smooth</string>
+    <string name="toggle_max_zoom">Max</string>
+    <string name="toggle_smooth_zoom">Smooth</string>
 
     <string name="take_picture">Take a picture</string>
     <string name="take_video">Record a video</string>
@@ -20,5 +20,7 @@
 
     <string name="share">Share</string>
     <string name="save">Save</string>
+    <string name="discard">Discard</string>
+
     <string name="back">Back</string>
 </resources>
