fixed some issues with zoom, and added a zoom-reset option (will reset zoom to 0)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="zoom_out">Out</string>
     <string name="toggle_max_zoom">Max</string>
     <string name="toggle_smooth_zoom">Smooth</string>
+    <string name="zoom_reset">Reset</string>
 
     <string name="share">Share</string>
     <string name="save">Save</string>
